# nonlinear_mpc

./: README.md  runNMPC.sh
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  (+2 more)
logs/: 202308171113_mpc_local_planner.csv  202308171114_mpc_local_planner.csv  202308171116_mpc_local_planner.csv  202308171117_mpc_local_planner.csv  202308171118_mpc_local_planner.csv
src/behavior_manager/: CMakeLists.txt  package.xml
src/behavior_manager/cfg/: behavior_manager_params.yaml
src/behavior_manager/data/: .~lock.parking_slot_locations.csv#  intermediate_goal_locations.txt  parking_slot_locations.ods  parking_slot_locations.txt  parking_slot_locations.txt_old.csv  parking_slot_locations_old
src/behavior_manager/launch/: behavior_manager_launch_golfcart.launch
src/behavior_manager/scripts/: GoalCheckerandGetter.py
src/mpc_local_planner/mpc_local_planner/mpc_local_planner_utils/: package.xml
src/mpc_local_planner/mpc_local_planner/mpc_local_planner_utils/scripts/: mpc_local_pub_logger.py  plotter_nmpc.py
src/mpc_local_planner/mpc_local_planner/mpc_local_planner_utils/scripts/logs/: 202309120840_mpc_local_planner.csv  202309120843_mpc_local_planner.csv  202309120846_mpc_local_planner.csv  202309120848_mpc_local_planner.csv  202309120851_mpc_local_planner.csv  202309121444_mpc_local_planner.csv  202309122135_mpc_local_planner.csv  202309122146_mpc_local_planner_turning right.csv  202309122147_mpc_local_planner_turning right.csv  202309122153_mpc_local_planner_turning right.csv  202309122202_mpc_local_planner_turning_left.csv  202309122204_mpc_local_planner_turning_left.csv  202309122207_mpc_local_planner_turning_left.csv  202309122215_mpc_local_planner_turning left_26deg.csv  202309122221_mpc_local_planner.csv
(+209 files in other folders)
