<?xml version="1.0"?>
<package format="2">
  <name>behavior_manager</name>
  <version>0.0.3</version>
  <description>Golf cart behavior_manager</description>

  <maintainer email="123@ros.com">John Doe</maintainer>
  <author email="123@ros.com">John Doe</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mpc_local_planner_examples</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>ackermann_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>roslaunch</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
